--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -12,10 +12,12 @@
     <ul>
         <% for (let product of products) {%>
             <li>
-                <%= product.name %>
+                <a href="/products/<%=product._id%>">
+                    <%=product.name%>
+                </a>
             </li>
             <% } %>
-    </ul>
+        </ul>
 </body>
 
 </html>
